<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    android:paddingHorizontal="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_image"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_donasi"
            android:layout_width="151dp"
            android:layout_height="97dp"
            android:scaleType="center"
            android:src="@drawable/empty_image" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_searchview"
            android:backgroundTint="@color/white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/campaign_label"
            android:textAlignment="center"
            android:textColor="@color/color_gray400"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins700"
        android:text="@string/title_campaign"
        android:textAlignment="textStart"
        android:textColor="@color/color_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins400"
        android:text="@string/date_info"
        android:textColor="@color/color_gray200"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/layout_image"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_jumlah_donasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins400"
        android:text="@string/jumlah_donasi"
        android:textColor="@color/color_gray200"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/layout_image"
        app:layout_constraintTop_toBottomOf="@id/text_date" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins700"
        android:text="@string/currency_rupiah"
        android:textColor="@color/color_title"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/layout_image"
        app:layout_constraintTop_toBottomOf="@+id/text_jumlah_donasi" />

    <TextView
        android:id="@+id/text_donasi_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins700"
        android:text="@string/default_amount"
        android:textColor="@color/color_title"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/currency"
        app:layout_constraintTop_toBottomOf="@+id/text_jumlah_donasi" />

    <TextView
        android:id="@+id/text_donasi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_status_berhasil"
        android:fontFamily="@font/poppins500"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/text_berhasil"
        android:textColor="@color/color_green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_gray300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency" />
</androidx.constraintlayout.widget.ConstraintLayout>